@startuml

'------------------------------------------------------------------------------'
Subject "1" -  "*" Observer

Subject <|.. ConcreatSubject
Observer <|.. ConcreatObserver

ConcreatSubject o- ConcreatObserver

 abstract class Subject {
   {abstract} registerObserver()
   {abstract} removeObserver()
   {abstract} notifyObserver()
 }

abstract class Observer {
  {abstract} update()
}

 class ConcreatSubject {
  registerObserver()
  removeObserver()
  notifyObserver()
}

class ConcreatObserver {
  update()
}
'------------------------------------------------------------------------------'

@enduml
